edit describe item page

--- a/src/describeItem.html
+++ b/src/describeItem.html
@@ -14,7 +14,7 @@
 	<main>
 
 
-		<div class="portfolio-describe-item">
+		<div class="portfolio-describe-item describe-item">
 			<div class="container__hd">
 				<p class="describe__way">
 					<a href="/">Главная</a>
@@ -26,122 +26,83 @@
 				<h1>Доставка еды Organic Food</h1>
 				<p>Разработка сайта</p>
 
+				<div class="portfolio-describe-item__container-for-buttons">
+					<a href="#">Разработка логотипа Белпромстандарт <span class="portfolio-describe-item__arrow-left"></span></a>
+					<a href="#">Разработка логотипа MOON <span class="portfolio-describe-item__arrow-right"></span></a>
+				</div>
+
+				<div class="portfolio-describe-item__organic-food-website-development-background-1">
+				</div>
+
 				<div class="portfolio-describe-item__container-base-caption">
 					<h2>Контекст и задача</h2>
 					<p class="portfolio-describe-item__text">Organic Food новое направление в сфере ресторанных услуг. Компания
 						выступает как альтернатива привычному
 						фастфуду, предлагая своим клиентам вкусное и здоровое питание с доставкой на дом или офис. Основная задача -
 						рассказать и показать пользователю, что питаться правильно это не обязательно дорого, сложно и невкусно.</p>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-1">
-					</div>
 				</div>
 
-				<div>
+				<div class="portfolio-describe-item__container-color-solution">
 					<h2>Цветовое решение</h2>
-					<p class="portfolio-describe-item__text">Заказчик хотел сочности, свежести, чистоты в оформлении. Конкретных
-						пожеланий цветовых решений не было,
-						поэтому мы искали вдохновение в красках природы. Но цветовая схема для сайта нашла нас сама. В процессе
-						подготовке контента для заказчика, мы изучали меню, обсуждали его систематизацию, делали наброски,
-						продумывали
-						есть ли смысл разбивать овощные смузи от фруктовых. И случайно выяснили, что никто из нашей команды никогда
-						не
-						пробовал сок из свеклы, не говоря уже о смузи. Вот так просто, практически случайно свекольный сок и стал
-						главной темой сайта. Заказчик утвердил цветовое сочетание с первого раза.</p>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-2">
+					<div class="portfolio-describe-item__container-color-solution-describe">
+						<div class="portfolio-describe-item__container-color-solution-text-container">
+							<p class="portfolio-describe-item__text">Заказчик хотел сочности, свежести, чистоты в оформлении.
+								Конкретных
+								пожеланий цветовых решений не было,
+								поэтому мы искали вдохновение в красках природы. Но цветовая схема для сайта нашла нас сама. В процессе
+								подготовке контента для заказчика, мы изучали меню, обсуждали его систематизацию, делали наброски,
+								продумывали
+								есть ли смысл разбивать овощные смузи от фруктовых. И случайно выяснили, что никто из нашей команды
+								никогда
+								не
+								пробовал сок из свеклы, не говоря уже о смузи. Вот так просто, практически случайно свекольный сок и
+								стал
+								главной темой сайта. Заказчик утвердил цветовое сочетание с первого раза.</p>
+						</div>
+						<!-- <div class="portfolio-describe-item__container-color-solution-image-container"> -->
+							<img src="/styles/images/describeItems/organic-food-website-development/color_img.png" alt="img"
+								class="portfolio-describe-item__organic-food-website-development-background-2">
+						<!-- </div> -->
 					</div>
 				</div>
-			</div>
 
-			<div class="container__hd">
-				<h2>Ключевые преимущества</h2>
-				<p class="portfolio-describe-item__text">При первом знакомстве клиента с услугами компании Organic Food важно
-					было избежать массы информации о
-					пользе
-					здорового питания, условиях работы, долгих рассказов об истории компании. Мы решили сосредоточить внимание
-					на
-					трех ключевых преимуществах: Качественные продукты, возможность бесплатной доставки и приятный ценник. Три
-					важных момента, после которых смотреть меню становится куда интереснее.</p>
 				<div
-					class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-3">
-				</div>
-			</div>
-
-			<div class="container__fhd">
-				<div
-					class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-4">
-				</div>
-			</div>
-
-
-			<div class="container__hd">
-				<h2>Чтобы не оставалось вопросов</h2>
-				<p class="portfolio-describe-item__text">Также было принято решение вынести блок часто задаваемых вопросов
-					вместе с отзывами клиентов сразу после
-					каталога блюд, таким образом максимально эффективно развеиваем возможные сомнения и помогаем принять решение
-					о совершении заказа.</p>
-				<div
-					class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-5">
-				</div>
-			</div>
-
-			<div class="container__fhd">
-				<div
-					class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-6">
-				</div>
-			</div>
-
-
-			<div class="container__hd">
-				<div
-					class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-7">
+					class="portfolio-describe-item__image--shadow portfolio-describe-item__organic-food-website-development-background-3">
 				</div>
 
-				<div>
-					<h2>Корзина и pop-ups</h2>
-					<p class="portfolio-describe-item__text">Выполнена в том же легком и аккуратном стиле, разбита по смысловым
-						шагам максимально информативно и
-						структурировано.</p>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-8">
+				<div class="portfolio-describe-item__container-base-caption">
+					<div>
+						<h2>Ключевые преимущества, FAQ и отзывы</h2>
+						<p class="portfolio-describe-item__text">При первом знакомстве клиента с услугами компании Organic Food
+							важно
+							было избежать массы информации о пользе здорового питания, условиях работы, долгих рассказов об истории
+							компании. Мы решили сосредоточить внимание на трех ключевых преимуществах: Качественные продукты,
+							возможность бесплатной доставки и приятный ценник. Три важных момента, после которых смотреть меню
+							становится куда интереснее. . Также было принято решение вынести блок часто задаваемых вопросов вместе с
+							отзывами клиентов сразу после каталога блюд, таким образом максимально эффективно развеиваем возможные
+							сомнения и помогаем принять решение о совершении заказа.</p>
 					</div>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-9">
+					<div>
+						<h2>Полезное</h2>
+						<p class="portfolio-describe-item__text">Для дальнейшего развития сайта были внедрены дополнительные
+							разделы,
+							способствующие привлечению дополнительных клиентов. Прежде всего, блог на тему полезного питания и рецепты
+							от команды поваров Organic Food.</p>
 					</div>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-10">
-					</div>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-11">
+					<div>
+						<h2>Корзина и pop-ups</h2>
+						<p class="portfolio-describe-item__text">Выполнена в том же легком и аккуратном стиле, разбита по смысловым
+							шагам максимально информативно и
+							структурировано.</p>
 					</div>
 				</div>
 
-				<div>
-					<h2>Полезное</h2>
-					<p class="portfolio-describe-item__text">Для дальнейшего развития сайта были внедрены дополнительные разделы,
-						способствующие привлечению
-						дополнительных клиентов. Прежде всего, блог на тему полезного питания и рецепты от команды поваров Organic
-						Food.</p>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-12">
-					</div>
-				</div>
 
-				<div>
-					<h2>Адаптив</h2>
-					<p class="portfolio-describe-item__text">Сайт получился не только насыщенным, ярким и бодрящим, но и, конечно,
-						же удобным и легко доступным с любого
-						устройства.</p>
-					<div
-						class="portfolio-describe-item__image portfolio-describe-item__organic-food-website-development-background-13">
-					</div>
-				</div>
-			</div>
 
-			<div class="portfolio-describe-item__container-for-buttons">
-				<a href="#">Разработка логотипа Белпромстандарт <span class="portfolio-describe-item__arrow-left"></span></a>
-				<a href="#">Разработка логотипа MOON <span class="portfolio-describe-item__arrow-right"></span></a>
+				<div class="portfolio-describe-item__container-for-buttons">
+					<a href="#">Разработка логотипа Белпромстандарт <span class="portfolio-describe-item__arrow-left"></span></a>
+					<a href="#">Разработка логотипа MOON <span class="portfolio-describe-item__arrow-right"></span></a>
+				</div>
 			</div>
 
 
